Fix pager button alignment on small screens

--- a/src/components/Pager/Pager.css
+++ b/src/components/Pager/Pager.css
@@ -8,11 +8,24 @@
   bottom: 0;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: stretch;
   padding: 1em 0;
   margin: -1em calc(var(--spacing-2) * -1) 0;
   padding: var(--spacing-2);
   padding-top: var(--spacing-3);
+  gap: var(--spacing);
 
   background-image: linear-gradient(180deg, var(--bg-step-0) 0%, var(--bg-step-1) 25%, var(--bg-step-2) 95%);
+
+  svg {
+    font-size: var(--font-size-lg);
+  }
+
+  svg:first-child {
+    margin-right: var(--spacing-half);
+  }
+
+  svg:last-child {
+    margin-left: var(--spacing-half);
+  }
 }
